2007-03-23  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: fix bug in closing a socket
    * jabberd/lib/str.cc: fix bug in XML escaping

2007-03-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/str.cc: fixing XML escaping error for character >
    * jabberd/lib/xmlnode.cc: using the db: prefix for the
	jabber:server:dialback namespace
    * dialback/dialback_out.cc: using correct namespace for mechanisms
	attribute on the SASL <auth/> element (no namespace)

2007-03-18  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.cc: modified handling of XML serialization and NS
	declaration handling
    * jabberd/lib/str.cc: same
    * jabberd/lib/expat.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/xstream.cc: same
    * jabberd/jabberd.h: same
    * jabberd/mio_xml.cc: same
    * jabberd/config.cc: same
    * jabberd/xdb.cc: same
    * jabberd/log.cc: same
    * jabberd/mio.cc: same
    * jabberd/deliver.cc: same
    * jabberd/base/base_load.cc: same
    * jabberd/base/base_stdout.cc: same
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jsm/modules/mod_vcard.cc: same
    * jsm/modules/mod_xml.cc: same
    * jsm/modules/mod_browse.cc: same
    * jsm/modules/mod_presence.cc: same
    * jsm/modules/mod_privacy.cc: same
    * jsm/modules/mod_roster.cc: same
    * jsm/modules/mod_offline.cc: same
    * jsm/modules/mod_register.cc: same
    * jsm/server.cc: same
    * jsm/deliver.cc: same
    * dialback/dialback_in.cc: same
    * dialback/dialback_out.cc: same
    * dialback/dialback.cc: same
    * dnsrv/dnsrv.cc: same
    * pthsock/client.cc: same
    * xdb_file/xdb_file.cc: same
    * xdb_file/xdbfiletool.cc: same
    * xdb_sql/xdb_sql.cc: same

2007-03-15  Matthias Wimmer  <m@tthias.eu>

    * jabberd/gcrypt_init.c: tell gcrypt that we are using pth
    * jabberd/mio_tls.cc: same
    * jabberd/jabberd.cc: same

2007-03-14  Matthias Wimmer  <m@tthias.eu>
